# brrrr

./: .gitignore  CMakeLists.txt  main.cpp
codes/: BlockCode.cpp  BlockCode.h  CodeItem.cpp  CodeItem.h  Fano.cpp  Fano.h  HilbertMoore.cpp  HilbertMoore.h  Huffman.cpp  Huffman.h  ShannonImpl.cpp  ShannonImpl.h  ShannonInterface.cpp  ShannonInterface.h  TernaryHuffman.cpp  TernaryHuffman.h
service/: ArchiveManager.cpp  ArchiveManager.h  Compresser.cpp  Compresser.h  Service.cpp  Service.h
